package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])  # keep

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "key.go",
        "ekms_aead.go",
        "ekms_client.go",
    ],
    importpath = "github.com/example/project/integration/ekms",
    visibility = ["//visibility:public"],
    deps = [
        "//core/registry:go_default_library",
        "//tink:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_thalesignite_crypto11//:go_default_library",
        "@com_github_thalesignite_gose//:go_default_library",
        "@com_github_thalesignite_gose//jose:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library"
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "key_test.go",
        "ekms_aead_test.go",
        "ekms_client_test.go",
    ],
    data = ["//integration/ekms/testdata:secrets"],
    embed = [":go_default_library"],
    deps = [
        "//tink:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_thalesignite_crypto11//:go_default_library",
        "@com_github_thalesignite_gose//:go_default_library",
    ],
)
